level5-D/lesson-20/main.css
body {
  margin: 0;
  padding: 0;
}

.html-lesson-wrapper {
  width: 100%;
  min-width: 360px;
  max-width: 100%;
  max-width: 892.75px;
  min-height: 1200px;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  overflow: hidden;
  position: relative;
  padding-bottom: 62px;
  background-image: url("https://lesson-materials.s3-ap-northeast-1.amazonaws.com/images/bg-header.png"), url("https://lesson-materials.s3-ap-northeast-1.amazonaws.com/images/05-bg-footer.png");
  background-position: top, bottom;
  background-size: contain;
  background-repeat: no-repeat;
  font-family: "Trebuchet MS";
  /* Test */
}

.html-lesson-wrapper header {
  font-family: "Arial";
}

.html-lesson-wrapper .b {
  font-weight: bold;
}

.html-lesson-wrapper .i {
  font-family: italic;
}

.html-lesson-wrapper .program-rank {
  position: absolute;
  top: 40px;
  left: 48px;
  color: #ffffff;
  font-size: 0px;
}

.html-lesson-wrapper .program-rank .type {
  padding: 3px 16px 3px 14px;
  background-color: #2078a0;
  font-size: clamp(7px, 1.8vw, 15px);
}

.html-lesson-wrapper .program-rank .level {
  padding: 3px 12px 3px 13px;
  background-color: #996699;
  font-size: clamp(7px, 1.8vw, 15px);
}

.html-lesson-wrapper .line {
  margin: 0 12px;
}

.html-lesson-wrapper .title {
  position: absolute;
  top: 80px;
  left: 55px;
  font-size: clamp(12px, 3vw, 27px);
}

.html-lesson-wrapper .lesson-number {
  position: absolute;
  right: 6.5%;
  width: 1.9%;
  text-align: center;
  margin-top: 7.4%;
  font-size: clamp(7px, 1.8vw, 13px);
  color: #ffffff;
}

.html-lesson-wrapper .row {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
      -ms-flex-direction: row;
          flex-direction: row;
}

.html-lesson-wrapper .sub-text {
  font-family: "Arial" !important;
  line-height: clamp(12px, 2.8vw, 22px);
  margin: 0 auto;
}

.html-lesson-wrapper .section {
  position: absolute;
  left: calc(-16% + 54px);
  color: #2078a0;
  font-weight: bold;
  font-family: "Arial";
  top: 2px;
}

.html-lesson-wrapper .divider {
  color: #d9d9d9;
  font-size: clamp(6px, 1.8vw, 15px);
  position: relative;
  left: 52%;
}

.html-lesson-wrapper .divider.d1 {
  margin-top: 8px;
}

.html-lesson-wrapper .divider.d2 {
  margin-top: 28px;
}

.html-lesson-wrapper ul {
  margin: 3px 0px 0px 0px;
  padding: 0;
  line-height: clamp(12px, 3vw, 26px);
}

.html-lesson-wrapper .test-content {
  position: relative;
  margin-left: clamp(50px, 14%, 126.5px);
  padding-left: 18.5px;
  padding-right: 60px;
  font-size: clamp(6px, 1.8vw, 15px);
  margin-top: 20%;
  line-height: clamp(12px, 3vw, 26px);
}

.html-lesson-wrapper .test-content:not(:first-child) {
  margin-top: 5%;
}

.html-lesson-wrapper .test-content ul {
  margin-top: 28px;
}

.html-lesson-wrapper .test-content ul li {
  list-style-type: none;
  margin-bottom: 30px;
}

.html-lesson-wrapper .test-content ul li::before {
  position: absolute;
  display: inline;
  content: "";
  border: 2px solid;
  padding: 0.625em 0.575em;
}

.html-lesson-wrapper .test-content ul li p {
  margin: 0 auto;
  margin-left: 40px;
}

.html-lesson-wrapper .test-content ul li p:first-child {
  font-weight: bold;
}

.html-lesson-wrapper footer {
  font-size: clamp(4.5px, 1.1vw, 9px);
  position: absolute;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  text-align: right;
  bottom: 43px;
  right: 6.2%;
  font-family: "Arial";
  width: 30%;
}

.html-lesson-wrapper footer span {
  overflow-wrap: break-word;
  display: inline-block;
}

@media screen and (max-width: 900px) {
  .html-lesson-wrapper {
    min-height: unset;
  }
  .html-lesson-wrapper section {
    padding-right: clamp(22px, 4.6vw, 60px) !important;
  }
  .html-lesson-wrapper ul {
    margin-top: clamp(18px, 3.4vw, 28px) !important;
  }
  .html-lesson-wrapper ul li {
    margin-bottom: clamp(18px, 3.4vw, 30px) !important;
  }
  .html-lesson-wrapper ul li p {
    margin-left: clamp(18px, 5vw, 40px) !important;
  }
  .html-lesson-wrapper .lesson-number {
    position: absolute;
    right: 6.6%;
    width: 1.9%;
    text-align: center;
    margin-top: 7.4%;
    font-size: clamp(7px, 1.8vw, 13px);
    color: #ffffff;
  }
  .html-lesson-wrapper footer {
    bottom: clamp(16px, 4.8vw, 43px);
    right: 5% !important;
    max-width: 34%;
  }
}

@media screen and (max-width: 768px) {
  .html-lesson-wrapper .program-rank {
    position: absolute;
    top: clamp(20px, 4vw, 40px);
    left: clamp(23px, 4vw, 48px);
  }
  .html-lesson-wrapper .title {
    top: clamp(45px, 8.4vw, 80px);
    left: clamp(30px, 4.1vw, 55px);
  }
  .html-lesson-wrapper .divider.d1, .html-lesson-wrapper .divider.d2 {
    margin-top: clamp(18px, 3.4vw, 28px);
  }
  .html-lesson-wrapper .section {
    left: calc(-16% + 30px);
  }
}

@media screen and (max-width: 600px) {
  .html-lesson-wrapper .type {
    padding: 2px 8px 2px 7px !important;
  }
  .html-lesson-wrapper .level {
    padding: 2px 6px 2px 7px !important;
  }
  .html-lesson-wrapper .lesson-number {
    margin-top: 6.9%;
  }
  .html-lesson-wrapper .line {
    margin: 0 6px;
    vertical-align: middle;
  }
}

@media screen and (max-width: 360px) {
  .html-lesson-wrapper .lesson-number {
    margin-top: 7.2%;
  }
  .html-lesson-wrapper footer {
    width: 100%;
    text-align: right;
  }
}
/*# sourceMappingURL=main.css.map */

